--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
 
   build:
     runs-on: windows-latest
-
+    permissions:
+      contents: write
+      
     steps:
     - uses: actions/checkout@v3
       with:
