--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,16 @@ jobs:
         submodules: 'true'
         fetch-depth: 0
 
-    - name: Configure CMake
-      run: cmake -G "Visual Studio 17 2022" -A "Win32" -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    - name: Install Python dependencies
+      run: | 
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyinstaller
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: |
+        python -m pip install --onefile main.py
+        mv dist/main.exe REPENTOGONUpdater.exe
 
     - name: Calculate SHA256
       shell: powershell
@@ -43,7 +48,7 @@ jobs:
       uses: MCKanpolat/auto-semver-action@1.0.5
       id: versioning
       with:
-        releaseType: patch
+        releaseType: minor
         github_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload release
