--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,32 +25,36 @@ jobs:
         submodules: 'true'
         fetch-depth: 0
 
-    - name: Configure CMake
-      run: cmake -G "Visual Studio 17 2022" -A "Win32" -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    - name: Install Python dependencies
+      run: | 
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyinstaller
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: |
+        pyinstaller --onefile main.py
+        mv dist/main.exe REPENTOGONUpdater.exe
 
     - name: Calculate SHA256
       shell: powershell
       run: |
         $PSDefaultParameterValues['*:Encoding'] = 'Default'
         $OutputEncoding = [System.Text.Utf8Encoding]::new($false)
-        cd ${{github.workspace}}/build/Release
         Get-FileHash .\REPENTOGONUpdater.exe | Select-Object -ExpandProperty Hash > hash.txt
     
     - name: Determine next build number
       uses: MCKanpolat/auto-semver-action@1.0.5
       id: versioning
       with:
-        releaseType: patch
+        releaseType: minor
         github_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload release
       uses: ncipollo/release-action@v1
       if: "contains(github.event.head_commit.message, 'chore: release') && github.event_name != 'pull_request'"
       with:
-        artifacts: "${{github.workspace}}/build/Release/REPENTOGONUpdater.exe,${{github.workspace}}/build/Release/hash.txt"
+        artifacts: "REPENTOGONUpdater.exe,hash.txt"
         tag: ${{steps.versioning.outputs.version}}
         token: ${{ secrets.GITHUB_TOKEN }}
           
@@ -58,6 +62,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: REPENTOGONInstaller
-        path: ${{github.workspace}}/build/Release/REPENTOGONUpdater.exe
+        path: REPENTOGONUpdater.exe
         retention-days: 30
 
